inline finally clause in Try node, simplify code compiler logic for Try