@@ -1033,7 +1033,7 @@ public class PySystemState extends PyObject implements AutoCloseable, Closeable,
             return false;
         }
         try {
-            ((JythonInitializer)initializer.newInstance()).initialize(pre, post, argv,
+            ((JythonInitializer)initializer.getDeclaredConstructor().newInstance()).initialize(pre, post, argv,
                     sysClassLoader, adapter);
         } catch (Exception e) {
             Py.writeWarning("initializer", "Failed initializing with class '" + className
